# kinematik

./: README (10).md  README.md  requirements.txt  streamlit_app.py
fsae_suspension/: .gitignore  CHANGES_AND_DEPLOY.md  CONTRIBUTING.md  CTO_REVIEW.md  DEPLOY_NOTES.md  GGV_USAGE.md  README.md  README.root.md  analytics_baseline.sql  analytics_buffer.jsonl  app.py  brake_thermal.py  coordinate_frames.py  demo_brake_rotor.py  demo_flexgen.py  demo_fullcar3d.py  demo_morphmesh.py  demo_pack_thermal.py  demo_panel_method.py  demo_phantom_envelope.py  demo_piv.py  demo_transient.py  demo_virtual_windtunnel.py  dynamics.py  fullcar3d.py  gen_windtunnel_demo_csv.py  process_library.xlsx  process_ttc.py  project.py  pyproject.toml  requirements-pinned.txt  requirements.txt  run_all.sql  streamlit_app.py
fsae_suspension/.streamlit/: config.toml
fsae_suspension/docs/: BOTTLENECKS.md  tire_cosim_interface.md
fsae_suspension/fsae_suspension/: README.md  app.py  process_ttc.py  streamlit_app.py
fsae_suspension/powertrain/: engine.py
fsae_suspension/suspension/: __init__.py  adapter.py  analytics.py  analytics_cache.py  analytics_global_counter.sql  analytics_schema.sql  arch_synth.py  auth.py  auth_ui.py  bolted_joint.py  brake_thermal.py  cad_ingest.py  cad_share.py  chassis.py  compliance.py  correlation.py  damper.py  degradation.py  dfmea.py  drive_export.py  dynamics.py  earshot.py  electronics.py  ev_electrical_check.py  ev_excel_roundtrip.py  ev_powertrain.py  flex.py  flexgen.py  fullcar3d.py  fusebox.py  ggv.py  ghost_topology.py  hardpoint_import.py  harness.py  integration.py  interfaces.py  inverse_genesis.py  inverse_genesis_fullcar.py  joints.py  kinematics.py  (+59 more)
fsae_suspension/tests/: test_aero_cosim.py  test_analytics.py  test_arch_synth.py  test_bolted_joint.py  test_bracket_fos.py  test_capabilities_v09.py  test_chassis.py  test_compliance.py  test_correlation.py  test_daq.py  test_degradation.py  test_dfmea.py  test_earshot.py  test_electronics.py  test_ensemble.py  test_ev_powertrain.py  test_flexgen.py  test_fusebox.py  test_ggv.py  test_ghost_topology.py  test_harness.py  test_history.py  test_integration.py  test_interfaces.py  test_inverse_genesis.py  test_inverse_genesis_fullcar.py  test_invites.py  test_kinematics.py  test_kinematik_stochastic.py  test_lapsim.py  test_laptime.py  test_lazy_init.py  test_lazy_layer.py  test_ledger_persistence.py  test_mem_utils.py  test_mission_briefing.py  test_morphmesh.py  test_motion_ratio_antidive.py  test_mountpoints.py  test_myth_entity_engine.py  (+33 more)
fsae_suspension/ui/: __init__.py  earshot.py  flexgen.py  fusebox.py  ghost_topology.py  inverse_genesis.py  kinematik_stochastic.py  (+13 more)
(+37 files in other folders)
